--- a/Principal.html
+++ b/Principal.html
@@ -28,6 +28,7 @@
          <br/>
         
         //ricardo
-        
+      <center><"https://www.google.com/url?sa=i&url=http%3A%2F%2Fplataforma.cesuver.edu.mx%2Freglamento%2FREGLAMENTO.PDF&psig=AOvVaw1TGBgbs_IMa4Tn3BybPb6z&ust=1615043519238000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKjNiI64me8CFQAAAAAdAAAAABAD" width="20%">
+        <p>no me deja subir archivos uwu'nt</p>
     </body>
 </html>
