--- a/Principal.html
+++ b/Principal.html
@@ -1,14 +1,35 @@
 <html>
     <head>
-        <title>Mi primera página WEB: texto</title>
+        <title>CESUVER: texto</title>
     </head>
     <body>
-         Esta es línea, y a continuación insertamos un salto de línea.<br/>
-         Esta es una línea, y a continuación insertamos un salto de línea.<br/>
-         Esta es una línea, y a continuación insertamos un salto de línea.<br/>
-         <p>Esto es un párrafo.</p>
-         <p>Esto es otro párrafo. Estoy realizando un cambio</p>
-        <p>probando, probando</p>
-        <p>khe</p>
+         
+         <h1><center><font color="Red">Ingenieria en Sistemas Computacionales</h1></center></font>
+         <br/>
+         <p>Objetivo General</p>
+         <p>Formar ingenieros en Ingeniería en Sistemas Computacionales con la capacidad de:</p>
+        <p>diseñar, desarrollar, administrar y evaluar los sistemas de software y automatizar los procesos administrativos,</p>
+        <p> dar soluciones a problemas reales y toma de decisiones.</p>
+
+        <h1><center><font color="Red">Ingenieria Mecatronica</h1></center></font>
+         <br/>
+
+        <p>Objetivo General</p>
+        <p>Formar ingenieros con bases teóricas y de aplicación en el campo de la mecánica,</p>
+        <p>electrónica y la simulación, capaces de desarrollar, diseñar e innovar las tecnologías existentes</p>
+
+        <h1><center><font color="Red">Administracion</h1></center></font>
+        <p>Formar profesionales con conocimientos, habilidades, valores y aptitudes para explicar, detectar, analizar y</p>
+        <p>evaluar los aspectos relacionados con la planeación, organización, dirección y control de las empresas</p>
+
+
+        <h1><center><font color="Red">Negocios</h1></center></font>
+        <p>Formar licenciados en administración de negocios internacionales</p>
+        <p>con conocimientos en legislación, comercio exterior y los fundamentos de la ley aduanera</p>
+         <br/>
+
+        
+      <center><"https://www.google.com/url?sa=i&url=http%3A%2F%2Fplataforma.cesuver.edu.mx%2Freglamento%2FREGLAMENTO.PDF&psig=AOvVaw1TGBgbs_IMa4Tn3BybPb6z&ust=1615043519238000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKjNiI64me8CFQAAAAAdAAAAABAD" width="20%">
+        <p>no me deja subir archivos uwu'nt</p>
     </body>
 </html>
