--- a/Principal.html
+++ b/Principal.html
@@ -13,6 +13,7 @@
          <p>Formar ingenieros en Ingeniería en Sistemas Computacionales con la capacidad de:</p>
          <p>diseñar, desarrollar, administrar y evaluar los sistemas de software y automatizar los procesos administrativos,</p>
          <p> dar soluciones a problemas reales y toma de decisiones.</p>
+         <p><a href="https://Sistemas.html">Mas informacion</a></center></p></li><br />
          </center>
 
         <h1><center><font color="Red">Ingenieria Mecatronica</h1></center></font>
