--- a/Derecho.html
+++ b/Derecho.html
@@ -1,6 +1,6 @@
 < html >
   < cuerpo >
-    < h1 > INGENIERÍA MECATRÓNICA </ h1 >
+    < h1 > DERECHO </ h1 >
 
 < h2 > OBJETIVO GENERAL </ h2>
 < p >
