--- a/Principal.html
+++ b/Principal.html
@@ -58,6 +58,15 @@
         <p>de nuestro entorno a raíz de la nueva concepción del sistema mercadólogo, desarrollando actividades gerenciales de investigación de mercados.</p>
         </center>
 
+        <h1><center><font color="Red">Licenciatura en Derecho</h1></center></font>
+        <br/>
+        <center>
+        <p>Objetivo General</p>
+        <p>Formar licenciados en derecho con los conocimientos, habilidades y valores necesarios en las ciencias y técnicas jurídicas,</p>
+        <p> utilizando al derecho como instrumento regulador de la realidad social.</p>
+        <p><a href="https://Derecho.html">Mas informacion</a></center></p></li><br />
+        </center>
+
 
         
       
