--- a/Principal.html
+++ b/Principal.html
@@ -67,6 +67,37 @@
         <p><a href="https://Derecho.html">Mas informacion</a></center></p></li><br />
         </center>
 
+        <h1><center><font color="Red">Ingenieria Industrial en Gestion Internacional </h1></center></font>
+        <br/>
+        <center>
+        <p>Objetivo General</p>
+        <p>Formar ingenieros industriales en gestión internacional líderes creativos, emprendedores e innovadores capacitados para diseñar y operar</p>
+        <p>estrategias para optimizar y administrar medios de producción de bienes y servicios.</p>
+        <p><a href="https://Industrial.html">Mas informacion</a></center></p></li><br />
+        </center>
+
+        <h1><center><font color="Red">Licenciatura en Pedagogia</h1></center></font>
+        <br/>
+        <center>
+        <p>Objetivo General</p>
+        <p>Aplicar los fundamentos teóricos-metodológicos que les permitan hacer un diagnóstico correcto de la situación educativa actual.</p>
+        </center>
+
+        <h1><center><font color="Red">Licenciatura en Contaduria y Finanzas</h1></center></font>
+        <br/>
+        <center>
+        <p>Objetivo General</p>
+        <p>Formar profesionales que satisfagan las necesidades contables de cualquier organización en los sectores públicos y privados,</p>
+        <p>con conocimientos en las áreas de contabilidad financiera, administrativa, auditoría fiscal, y finanzas.</p>
+        </center>
+
+        <h1><center><font color="Red">Licenciatura en Lenguas Extranjeras</h1></center></font>
+        <br/>
+        <center>
+        <p>Objetivo General</p>
+        <p>Formar profesionistas con las competencias necesarias para comunicarse de manera oral y escrita en los idiomas inglés, francés y español,</p>
+        <p>que le permitan proponer soluciones en el ámbito académico, lingüístico, traducción e interpretación de lenguas.</p>
+        </center>
 
         
       
