--- a/Principal.html
+++ b/Principal.html
@@ -82,6 +82,7 @@
         <center>
         <p>Objetivo General</p>
         <p>Aplicar los fundamentos teóricos-metodológicos que les permitan hacer un diagnóstico correcto de la situación educativa actual.</p>
+        <p><a href="https://Pedagogia.html">Mas informacion</a></center></p></li><br />
         </center>
 
         <h1><center><font color="Red">Licenciatura en Contaduria y Finanzas</h1></center></font>
