--- a/Principal.html
+++ b/Principal.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <body background="https://www.wallpapertip.com/wmimgs/79-792595_pastel-color-background-green.jpg">
-         <center><img src="https://www.google.com/url?sa=i&url=http%3A%2F%2Fplataforma.cesuver.edu.mx%2Freglamento%2FREGLAMENTO.PDF&psig=AOvVaw1TGBgbs_IMa4Tn3BybPb6z&ust=1615043519238000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKjNiI64me8CFQAAAAAdAAAAABAD" width="20%">
+         <center><img src="cesulogo.png" width="20%">
              
          <h1><center><font color="Red">Ingenieria en Sistemas Computacionales</h1></center></font>
          <br/>
@@ -13,7 +13,7 @@
          <p>Formar ingenieros en Ingeniería en Sistemas Computacionales con la capacidad de:</p>
          <p>diseñar, desarrollar, administrar y evaluar los sistemas de software y automatizar los procesos administrativos,</p>
          <p> dar soluciones a problemas reales y toma de decisiones.</p>
-         <p><a href="https://Sistemas.html">Mas informacion</a></center></p></li><br />
+         <p><a href="Sistemas.html">Mas informacion</a></center></p></li><br />
          </center>
 
         <h1><center><font color="Red">Ingenieria Mecatronica</h1></center></font>
@@ -22,7 +22,7 @@
         <p>Objetivo General</p>
         <p>Formar ingenieros con bases teóricas y de aplicación en el campo de la mecánica,</p>
         <p>electrónica y la simulación, capaces de desarrollar, diseñar e innovar las tecnologías existentes</p>
-        <p><a href="https://Mecatronica.html">Mas informacion</a></center></p></li><br />
+        <p><a href="Mecatronica.html">Mas informacion</a></center></p></li><br />
         </center>
 
         <h1><center><font color="Red">Licenciatura en Administracion de Empresas</h1></center></font>
@@ -48,7 +48,7 @@
         <p>Objetivo General</p>
         <p>Preparar recursos humanos para hacer frente a las necesidades del que hacer jurídico, operativo, directivo</p>
         <p>y de gestión en materia de Comercio Exterior, y de esta manera responder a las expectativas que requiere la empresa y en general el sector productivo exportador.</p>
-        <p><a href="https://Comercio.html">Mas informacion</a></center></p></li><br />
+        <p><a href="Comercio.html">Mas informacion</a></center></p></li><br />
         </center>
              
         <h1><center><font color="Red">Licenciatura en Mercadotecnia y publicidad </h1></center></font>
@@ -65,7 +65,7 @@
         <p>Objetivo General</p>
         <p>Formar licenciados en derecho con los conocimientos, habilidades y valores necesarios en las ciencias y técnicas jurídicas,</p>
         <p> utilizando al derecho como instrumento regulador de la realidad social.</p>
-        <p><a href="https://Derecho.html">Mas informacion</a></center></p></li><br />
+        <p><a href="Derecho.html">Mas informacion</a></center></p></li><br />
         </center>
 
         <h1><center><font color="Red">Ingenieria Industrial en Gestion Internacional </h1></center></font>
@@ -74,7 +74,7 @@
         <p>Objetivo General</p>
         <p>Formar ingenieros industriales en gestión internacional líderes creativos, emprendedores e innovadores capacitados para diseñar y operar</p>
         <p>estrategias para optimizar y administrar medios de producción de bienes y servicios.</p>
-        <p><a href="https://Industrial.html">Mas informacion</a></center></p></li><br />
+        <p><a href="Industrial.html">Mas informacion</a></center></p></li><br />
         </center>
 
         <h1><center><font color="Red">Licenciatura en Pedagogia</h1></center></font>
@@ -82,7 +82,7 @@
         <center>
         <p>Objetivo General</p>
         <p>Aplicar los fundamentos teóricos-metodológicos que les permitan hacer un diagnóstico correcto de la situación educativa actual.</p>
-        <p><a href="https://Pedagogia.html">Mas informacion</a></center></p></li><br />
+        <p><a href="Pedagogia.html">Mas informacion</a></center></p></li><br />
         </center>
 
         <h1><center><font color="Red">Licenciatura en Contaduria y Finanzas</h1></center></font>
@@ -99,7 +99,7 @@
         <p>Objetivo General</p>
         <p>Formar profesionistas con las competencias necesarias para comunicarse de manera oral y escrita en los idiomas inglés, francés y español,</p>
         <p>que le permitan proponer soluciones en el ámbito académico, lingüístico, traducción e interpretación de lenguas.</p>
-        <p><a href="https://Lenguasextranjeras.html">Mas informacion</a></center></p></li><br />
+        <p><a href="Lenguasextranjeras.html">Mas informacion</a></center></p></li><br />
         </center>
 
     </body>
