--- a/Principal.html
+++ b/Principal.html
@@ -57,6 +57,7 @@
         <p>Objetivo General</p>
         <p>El licenciado de mercadotecnia y publicidad será capaz de investigar y analizar las necesidades de los consumidores ante los cambios continuos e impredecibles</p>
         <p>de nuestro entorno a raíz de la nueva concepción del sistema mercadólogo, desarrollando actividades gerenciales de investigación de mercados.</p>
+        <p><a href="Mercadotecnia.html">Mas informacion</a></center></p></li><br />
         </center>
 
         <h1><center><font color="Red">Licenciatura en Derecho</h1></center></font>
