--- a/Principal.html
+++ b/Principal.html
@@ -92,6 +92,7 @@
         <p>Objetivo General</p>
         <p>Formar profesionales que satisfagan las necesidades contables de cualquier organización en los sectores públicos y privados,</p>
         <p>con conocimientos en las áreas de contabilidad financiera, administrativa, auditoría fiscal, y finanzas.</p>
+        <p><a href="Contaduria.html">Mas informacion</a></center></p></li><br />
         </center>
 
         <h1><center><font color="Red">Licenciatura en Lenguas Extranjeras</h1></center></font>
