--- a/Principal.html
+++ b/Principal.html
@@ -40,6 +40,7 @@
         <p>Objetivo General</p>
         <p>Formar licenciados en administración de negocios internacionales</p>
         <p>con conocimientos en legislación, comercio exterior y los fundamentos de la ley aduanera</p>
+        <p><a href="Negocios.html">Mas informacion</a></center></p></li><br />
         </center>
          
         <h1><center><font color="Red">Licenciatura en Comercio Exterior </h1></center></font>
