--- a/Industrial.html
+++ b/Industrial.html
@@ -1,5 +1,5 @@
 <html>
-  <body>
+  <body background="https://www.wallpapertip.com/wmimgs/79-792595_pastel-color-background-green.jpg">
     <h1>INGENIERÍA 
 INDUSTRIAL EN GESTIÓN INTERNACIONAL</h1>
 
