--- a/Principal.html
+++ b/Principal.html
@@ -31,6 +31,7 @@
         <p>Objetivo General</p>
         <p>Formar profesionales con conocimientos, habilidades, valores y aptitudes para explicar, detectar, analizar y</p>
         <p>evaluar los aspectos relacionados con la planeación, organización, dirección y control de las empresas</p>
+        <p><a href="Administracion.html">Mas informacion</a></center></p></li><br />
         </center>
 
 
