--- a/Principal.html
+++ b/Principal.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>CESUVER: texto</title>
+        <title>CESUVER: carreras</title>
     </head>
     <body>
         <body background="https://www.wallpapertip.com/wmimgs/79-792595_pastel-color-background-green.jpg">
